# youtube-digest

./: .gitignore  README.md  config.example.yaml  pyproject.toml  ytdigest-listener.service
youtube_digest/: cli.py  config.py  email_shell.md  emailer.py  fetcher.py  listener.py  prompt.md  prompt_topic.md  reply_prompt.md  summariser.py
