[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-digest"
version = "0.3.1"
description = "Daily YouTube channel digest — fetch transcripts, summarise with Claude, email the result"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "pyyaml",
    "certifi",
    "trafilatura",
    "feedparser",
]

[project.scripts]
ytdigest = "youtube_digest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["youtube_digest*"]

[tool.setuptools.package-data]
youtube_digest = ["prompt.md", "reply_prompt.md"]
